--- a/src/sidemenu/styles/modules/_inner.scss
+++ b/src/sidemenu/styles/modules/_inner.scss
@@ -25,7 +25,7 @@
       }
 
       &:not(#{ns(collapse)}--expanded) {
-        visibility: visible;
+        visibility: inherit;
       }
     }
   }
